Add daily ATR aggregation and enhanced data processing logic.
Implemented daily ATR calculation from hourly data with resampling and true range computation. Integrated functionalities for copying daily ATR to minute files and included support for daily data pre-processing in `Main`. Extended weighting logic to incorporate ATR ratios, improving overall data processing workflows.